--- a/src/templates/partials/script.hbs
+++ b/src/templates/partials/script.hbs
@@ -3,4 +3,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" type="text/javascript"></script>
     <script src="./scripts/nice-select2.js"></script>
+   <script>            
+      let backend_Url= "{{backend_Url}}";
+      </script>
     <script src="./scripts/script.js" type="text/javascript"></script>
