--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -18,8 +18,8 @@
                     <div class="absolute pfpDropDown hidden bg-white right-0">
                         <div class="py-1 flex w-[200px] h-auto flex-col" role="none">
                         <a href="#" class="block px-4 py-2 text-sm text-gray-700 border-b border-black break-words" role="menuitem">Email: {{email}}</a>
-                         <button class="logout block px-4 py-2 text-sm text-gray-700" role="menuitem">Logout</button>
-                        <button class="logoutAll block px-4 py-2 text-sm text-gray-700" role="menuitem">Logout from All Devices</button>
+                         <button class="logout block px-4 py-2 text-sm text-gray-700 text-left" role="menuitem">Logout</button>
+                        
                         </div>
                     </div>
 
