--- a/src/templates/partials/forecast.hbs
+++ b/src/templates/partials/forecast.hbs
@@ -1,57 +1,51 @@
- <tr class="relative forecast_instance">
-        <td id="{{id}}" class="dayName forecast_instance1 lg:hover:cursor-pointer"><i class="fa-solid fa-angle-down mr-3"></i>Sunday</td>
+ <tr class="relative forecast_instance lg:hover:cursor-pointer" id="{{id}}" forecast_date="">
+    {{!-- <td class="dark-sub-shimmer"></td> --}}
+        <td  class="dayName forecast_instance1">
+            <div class="dark-sub-shimmer"></div>
+            <i class="fa-solid fa-angle-down mr-3"></i>
+            <span class="forecast_day">Sunday</span>
+        </td>
         
         <td class="forecast_status lg:hidden min-[1200px]:table-cell">
             <div class="flex flex-row gap-0 justify-start min-[1400px]:justify-start items-center w-full">
-            <span class="overflow-hidden overflow-ellipsis whitespace-nowrap w-full hidden min-[1400px]:block">Thunder</span>
+
+            <span class="overflow-hidden overflow-ellipsis whitespace-nowrap w-full hidden min-[1400px]:block forecast_desc" title="">Thunder</span>
             <img src="https://f005.backblazeb2.com/file/WeatherApp/DayIcons/cloudy.svg" class="forecast_icon">
             </div>
         </td>
-        <td>12&deg;C</td>
-        <td>40&deg;C</td>
+        <td class="forecast_min">12&deg;C</td>
+        <td class="forecast_max">40&deg;C</td>
         
 </tr>
 
-<tr class="lg:hover:cursor-grab" data-target="{{id}}">
+<tr class="lg:hover:cursor-grab" data-target="{{id}}" infoSet="false">
 <td colspan="4" >
-    <div id="dropdown" >
+    <div id="dropdown" class="relative">
         <div class="dropdown-content dark:text-black flex flex-row flex-wrap-none gap-3 overflow-x lg:overflow-x-hidden lg:hover:overflow-x-auto active:cursor-grabbing h-[0px] opacity-0">
-            <div class="dropdown-item h-[130px]  min-w-[80px] max-[780px]:min-w-[70px] rounded-[5px] flex flex-col items-center justify-center bg-[#EEF6FF]">
-                <img class="detail_icon w-[60px] " src="https://f005.backblazeb2.com/file/WeatherApp/DayIcons/clear.svg" >
-                <div class="detail_temp font-bold text-[1.2rem]">28 &deg;C</div>
-                <div class="detail_time text-base font-normal">1 AM</div>
-            </div>
-            <div class="dropdown-item h-[130px] min-w-[80px] max-[780px]:min-w-[70px] rounded-[5px] flex flex-col items-center justify-center bg-[#EEF6FF]">
-                <img class="detail_icon w-[60px] " src="https://f005.backblazeb2.com/file/WeatherApp/DayIcons/clear.svg" >
-                <div class="detail_temp font-bold text-[1.2rem]">28 &deg;C</div>
-                <div class="detail_time text-base font-normal">1 AM</div>
-            </div>
-            <div class="dropdown-item h-[130px] min-w-[80px] max-[780px]:min-w-[70px] rounded-[5px] flex flex-col items-center justify-center bg-[#EEF6FF]">
-                <img class="detail_icon w-[60px] " src="https://f005.backblazeb2.com/file/WeatherApp/DayIcons/clear.svg" >
-                <div class="detail_temp font-bold text-[1.2rem]">28 &deg;C</div>
-                <div class="detail_time text-base font-normal">1 AM</div>
-            </div>
-            <div class="dropdown-item h-[130px] min-w-[80px] max-[780px]:min-w-[70px] rounded-[5px] flex flex-col items-center justify-center bg-[#EEF6FF]">
-                <img class="detail_icon w-[60px] " src="https://f005.backblazeb2.com/file/WeatherApp/DayIcons/clear.svg" >
-                <div class="detail_temp font-bold text-[1.2rem]">28 &deg;C</div>
-                <div class="detail_time text-base font-normal">1 AM</div>
-            </div>
-            <div class="dropdown-item h-[130px] min-w-[80px] max-[780px]:min-w-[70px] rounded-[5px] flex flex-col items-center justify-center bg-[#EEF6FF]">
-                <img class="detail_icon w-[60px] " src="https://f005.backblazeb2.com/file/WeatherApp/DayIcons/clear.svg" >
-                <div class="detail_temp font-bold text-[1.2rem]">28 &deg;C</div>
-                <div class="detail_time text-base font-normal">1 AM</div>
-            </div>
-            <div class="dropdown-item h-[130px] min-w-[80px] max-[780px]:min-w-[70px] rounded-[5px] flex flex-col items-center justify-center bg-[#EEF6FF]">
-                <img class="detail_icon w-[60px] " src="https://f005.backblazeb2.com/file/WeatherApp/DayIcons/clear.svg" >
-                <div class="detail_temp font-bold text-[1.2rem]">28 &deg;C</div>
-                <div class="detail_time text-base font-normal">1 AM</div>
-            </div>
-            <div class="dropdown-item h-[130px] min-w-[80px] max-[780px]:min-w-[70px] rounded-[5px] flex flex-col items-center justify-center bg-[#EEF6FF]">
-                <img class="detail_icon w-[60px] " src="https://f005.backblazeb2.com/file/WeatherApp/DayIcons/clear.svg" >
-                <div class="detail_temp font-bold text-[1.2rem]">28 &deg;C</div>
-                <div class="detail_time text-base font-normal">1 AM</div>
-            </div>
-            
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{!-- {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}}
+           {{>forecast_hourly}} --}}
         </div>
     </div>
 </td>
