--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -1,14 +1,17 @@
-<div class="h-[100px] max-[830px]:h-[110px] max-[830px]:w-full max-[830px]:m-0 w-[95%] m-auto max-[830px]:mb-[12px]">
-<div class="h-[100px] max-[830px]:h-[110px] bg-transparent w-full right-0">
- <div class="header w-full h-full bg-transparent max-[830px]:flex-col-reverse max-[830px]:justify-center max-[830px]:gap-0 px-4 py-0 pb-0 flex flex-row items-center justify-between gap-4 relative ">
+<div class="h-[100px] max-[830px]:h-[50px] max-[830px]:w-full max-[830px]:m-0 w-[95%] m-auto max-[830px]:mt-[10px] max-[830px]:mb-4">
+<div class="h-[100px] max-[830px]:h-[50px] bg-transparent w-full right-0">
+  <div class="header w-full h-full bg-transparent max-[830px]:flex-row max-[830px]:justify-center max-[830px]:gap-0 px-4 py-0 pb-0 flex flex-row items-center justify-between gap-4 relative ">
 
-                <div class="search_box bg-white px-4 py-2 items-center rounded-lg ml-[0px] mt-[10px] w-[55%] max-w-[600px] flex-shrink-[10] max-[830px]:w-full max-[830px]:max-w-full">
-                    <input type="search" class="bg-transparent focus:outline-none w-full" name="search_city" id="search_city" placeholder="Search city...">
-                    <div class="circle"></div>
-                    <img src="./resources/dark_profile/search.png" class="w-[16px] h-[16px] ml-2">
+                <div class="search_box bg-white items-center rounded-t-lg border-b border-b-black ml-[0px] mt-[10px] w-[55%] max-w-[600px] flex-shrink-[10] max-[830px]:w-full max-[830px]:max-w-full text-black">
+                    <input type="search" class=" px-4 py-2 bg-transparent focus:outline-none w-full max-[830px]:hidden" name="search_city" id="search_city" placeholder="Search city...">
+                    <div class="circle">
+                    <img src="./resources/dark_profile/search.png" class="w-[16px] h-[16px] max-[830px]:ml-0">
+                    </div>
+                    <ul class="city_list bg-white text-black absolute top-[104%] z-20 left-0 w-full h-auto rounded-b-lg">
+                    </ul>
                 </div>
 
-                <div class="profile-mode relative right-[0px] gap-[10px] px-4 py-1 h-[50px] flex items-center justify-center max-[830px]:p-0 max-[830px]:w-full max-[830px]:justify-between">
+                <div class="profile-mode relative right-[0px] gap-[10px] px-4 py-1 h-[50px] flex items-center justify-center max-[830px]:p-0 max-[830px]:w-full max-[830px]:justify-end max-[830px]:gap-[2px]">
                     <button id="darkMode" class=" darkMode flex items-center justify-center  w-[50px] h-[50px] dark:hidden rounded-full" ><img class="w-[95%]" src="./resources/dark_profile/Dark.svg"></button>
 
                     <button id="darkMode" class=" darkMode items-center justify-center  w-[50px] h-[50px] rounded-full hidden dark:flex" ><img class="w-[95%]" src="./resources/darkModeIcons/Dark.svg"></button>
@@ -18,14 +21,14 @@
                     <div class="absolute pfpDropDown hidden bg-white right-0">
                         <div class="py-1 flex w-[200px] h-auto flex-col" role="none">
                         <a href="#" class="block px-4 py-2 text-sm text-gray-700 border-b border-black break-words" role="menuitem">Email: {{email}}</a>
-                         <button class="logout block px-4 py-2 text-sm text-gray-700 text-left" role="menuitem">Logout</button>
-                        
+                        <button class="logout block px-4 py-2 text-sm text-left text-gray-700" role="menuitem">Logout</button>
+                      
                         </div>
                     </div>
 
                     </div>
 
-                    <button class="p-2 px-4 font-semibold text-base bg-white outline-2 outline-black outline dark:bg-[#181C2D] {{#if loggedIn}} hidden{{/if}} dark:outline-white min-w-[100px] rounded ml-2 max-[830px]:text-[0.9rem] max-[830px]:"><a href="/login">Login/SignUp</a></button>
+                    <button class=" font-semibold text-base  {{#if loggedIn}} hidden{{/if}} "><a class="p-2 px-4 bg-white dark:outline-white min-w-[100px] rounded ml-2 max-[830px]:text-[0.9rem] hover:bg-white hover:text-black outline-2 transition-all outline-black outline dark:bg-[#181C2D]" href="/login">Login/SignUp</a></button>
                 </div>
             </div>
 </div>
