--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -1,5 +1,5 @@
 <!-- <!DOCTYPE html> -->
-<html lang="en" class="dark">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -134,7 +134,7 @@
                         <select name="forecast" id="forecast" class="w-full">
                             <option value="3">3 day forecast</option>
                             <option value="7">7 day forecast</option>
-                            <option value="15">15 day forecast</option>
+                            <option value="14" selected>14 day forecast</option>
                         </select>
                 </div>
 
@@ -159,6 +159,13 @@
                           {{>forecast id="row5"}}
                           {{>forecast id="row6"}}
                           {{>forecast id="row7"}}
+                          {{>forecast id="row8"}}
+                          {{>forecast id="row9"}}
+                          {{>forecast id="row10"}}
+                          {{>forecast id="row11"}}
+                          {{>forecast id="row12"}}
+                          {{>forecast id="row13"}}
+                          {{>forecast id="row14"}}
                         </tbody>
                         {{else}}
                         <tbody>
