--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -62,7 +62,7 @@
 
                         <img class="w-[35px] h-[40px]" src="./resources/dark_profile/map-pin-2-fill.png">
 
-                        <span class="font-bold min-[1400px]:text-3xl text-2xl text-left">Prayagraj, Uttar Pradesh</span>
+                        <span class=" font-bold min-[1400px]:text-3xl text-2xl text-left max-[500px]:font-normal">Prayagraj, Uttar Pradesh</span>
                     </div> 
 
                     <div class="relative flex gap-4 min_max items-start text-left min-w-[80px]">
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="flex flex-row items-center max-[1200px]:justify-end justify-around min-[830px]:w-[90%] w-[60%] h-[200px] main_info shimmer_main_temp">
-                    <div class="dark-sub-shimmer hidden" ></div>
+                    <div class="dark-sub-shimmer hidden max-[830px]:h-[108%] max-[830px]:top-[-20px]" ></div>
                     <div class="sub_card1 mr-[0px]">
 
                         <div class="inner_subCard1 relative max-[830px]:top-[10px] min-[1400px]:w-[180px] w-[150px]">
@@ -133,8 +133,8 @@
                 <div class="forecast-selection w-1/2 h-[50px] m-auto dark:text-black font-semibold mt-2 min-w-[200px]">
                         <select name="forecast" id="forecast" class="w-full">
                             <option value="3">3 day forecast</option>
-                            <option value="7">7 day forecast</option>
-                            <option value="14" selected>14 day forecast</option>
+                            <option value="7" selected>7 day forecast</option>
+                            <option value="14" >14 day forecast</option>
                         </select>
                 </div>
 
@@ -189,7 +189,7 @@
         <!-- 24 hour weather line chart-->
         <div class="layout_box dayHourChart col-start-2 col-span-3 max-[1200px]:row-start-3 h-[210px] bg-white dark:bg-[#181C2D] text-center max-[830px]:col-start-1 max-[830px]:col-span-1 lg:mr-0 relative">
             <div class="dark-sub-shimmer"></div>
-            <h1 class="absolute w-fit left-[40px] m-[3px]">24 Hour Chart</h1>
+            <h1 class="z-10 font-bold absolute w-full left-[40px] m-[3px]">24 Hour Chart</h1>
             <div id="graphContainer" class="relative p-2">
                         {{>24hourSvg weather="cloudy"}}
                         {{>24hourSvg weather="rain"}}
@@ -307,7 +307,7 @@
         <div class="layout_box detail_cards col-span-2 max-[1200px]:col-span-3 max-[1200px]:col-start-2 min-h-[500px] row-span-1 dark:bg-[#181C2D] text-center max-[830px]:col-start-1 max-[830px]:col-span-1 flex flex-col items-center justify-around  xl:mr-0 max-[500px]:gap-[15px]">
             <div class="flex flex-row items-center justify-center h-[47%] xl:h-[47%] w-full bg-white rounded-[10px] gap-[0px] px-2 dark:bg-[#181c2d] dark:outline outline-white outline-1 max-[500px]:h-[400px] max-[500px]:p-4 max-[500px]:flex-col">
                 <div class="air-visual w-full flex flex-col h-full justify-around">
-                    <h2 class="mb-0 text-left font-medium text-[1.4rem] max-[500px]:text-[1.2rem]">Air Quality</h2>
+                    <h2 class="mb-0 text-left font-medium text-[1.4rem] max-[500px]:text-[1.2rem]">Air Quality Index</h2>
                     <div class="relative w-[69%] max-[500px]:w-[100px] mx-auto min-w-[100px]">
                     <img class="w-full max-w-[120px] mx-auto" src="./resources/weatherSubCards/speedSvg.svg" alt="Image description">
                     <img class="w-[auto] left-[48%] lg:left-[47%] h-[45%] top-[6%] origin-bottom absolute mx-auto air_dial" src="./resources/weatherSubCards/speedDial.svg" alt="Image description">
