--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -20,11 +20,11 @@
             <div class="header w-full h-full bg-transparent max-[830px]:flex-row max-[830px]:justify-center max-[830px]:gap-0 px-4 py-0 pb-0 flex flex-row items-center justify-between gap-4 relative ">
 
                 <div class="search_box bg-white items-center rounded-t-lg border-b border-b-black ml-[0px] mt-[10px] w-[55%] max-w-[600px] flex-shrink-[10] max-[830px]:w-full max-[830px]:max-w-full text-black">
-                    <input type="search" class=" px-4 py-2 bg-transparent focus:outline-none w-full max-[830px]:hidden" name="search_city" id="search_city" placeholder="Search city...">
+                    <input type="search" autocomplete="off" class=" px-4 py-2 bg-transparent focus:outline-none w-full max-[830px]:hidden" name="search_city" id="search_city" placeholder="Search city...">
                     <div class="circle">
                     <img src="./resources/dark_profile/search.png" class="w-[16px] h-[16px] max-[830px]:ml-0">
                     </div>
-                    <ul class="city_list bg-white text-black absolute top-[104%] z-20 left-0 w-full h-auto rounded-b-lg">
+                    <ul class="city_list max-h-[500px] overflow-x-auto bg-white text-black absolute top-[104%] z-20 left-0 w-full h-auto rounded-b-lg">
                     </ul>
                 </div>
 
