--- a/src/public/styles/output.css
+++ b/src/public/styles/output.css
@@ -867,6 +867,14 @@ video {
   height: 100vh;
 }
 
+.max-h-\[400px\] {
+  max-height: 400px;
+}
+
+.max-h-\[500px\] {
+  max-height: 500px;
+}
+
 .min-h-\[420px\] {
   min-height: 420px;
 }
@@ -1106,6 +1114,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
 }
 
 .overflow-ellipsis {
@@ -1782,18 +1794,18 @@ thead th:nth-child(4), tbody td:nth-child(4) {
   transition: all 0.3s ease-in-out;
 }
 
-body::-webkit-scrollbar,.dropdown-content::-webkit-scrollbar,tbody::-webkit-scrollbar {
+body::-webkit-scrollbar,.dropdown-content::-webkit-scrollbar,.tbody::-webkit-scrollbar, .city_list::-webkit-scrollbar {
   width: 5px;
   /* Width of the scrollbar */
   height: 5px;
 }
 
-body::-webkit-scrollbar-track,.dropdown-content::-webkit-scrollbar-track, tbody::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track,.dropdown-content::-webkit-scrollbar-track, tbody::-webkit-scrollbar-track,.city_list::-webkit-scrollbar-track  {
   background: #f1f1f1;
   /* Track background color */
 }
 
-body::-webkit-scrollbar-thumb,.dropdown-content::-webkit-scrollbar-thumb,tbody::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,.dropdown-content::-webkit-scrollbar-thumb,tbody::-webkit-scrollbar-thumb,.city_list::-webkit-scrollbar-thumb {
   background: #888;
   /* Thumb color */
 }
