--- a/src/public/styles/input.css
+++ b/src/public/styles/input.css
@@ -352,11 +352,16 @@
   overflow-y: hidden;
   transition: all 0.3s ease-in-out;
 }
-body::-webkit-scrollbar,.dropdown-content::-webkit-scrollbar,.tbody::-webkit-scrollbar, .city_list::-webkit-scrollbar {
+body::-webkit-scrollbar,
+.dropdown-content::-webkit-scrollbar,
+tbody::-webkit-scrollbar,
+.city_list::-webkit-scrollbar {
   width: 5px; /* Width of the scrollbar */
   height: 5px;
 }
-body::-webkit-scrollbar-track,.dropdown-content::-webkit-scrollbar-track, tbody::-webkit-scrollbar-track,.city_list::-webkit-scrollbar-track  {
+body::-webkit-scrollbar-track,
+.dropdown-content::-webkit-scrollbar-track, tbody::-webkit-scrollbar-track,
+.city_list::-webkit-scrollbar-track {
   background: #f1f1f1; /* Track background color */
 }
 body::-webkit-scrollbar-thumb,.dropdown-content::-webkit-scrollbar-thumb,tbody::-webkit-scrollbar-thumb,.city_list::-webkit-scrollbar-thumb {
@@ -512,32 +517,6 @@ input:checked + .slider:before {
 .lockPages{
   color: gray;
 }
-/* @media screen and (min-width:1024px){
-  .unit-option label:hover {
-    background-color: #ddd;
-  }
-  html.dark .pages .lockPages:hover, html .pages .lockPages:hover{
-    color: gray;
-    background: transparent;
-  }
-  html.dark .pages a:hover{
-    background: #ffffff3b;
-      padding: 0.5rem;
-      padding-right: 0;
-      color: white;
-  }
-  .pages a:hover{
-    background: #EEF6FF;
-      padding: 0.5rem;
-      padding-right: 0;
-      color: black;
-  }
-  
-  body::-webkit-scrollbar-thumb:hover,.dropdown-content::-webkit-scrollbar-thumb:hover,tbody::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
-} */
-
 
  @media screen and (max-width:1024px) {
   .pages{
@@ -545,35 +524,6 @@ input:checked + .slider:before {
   }
 
  }
- /* @media screen and (min-width:1024px) and (max-width:1200px) {
-  .weather_main_card{
-    height: 300px;
-  }
-  .location{
-    align-items: center;
-  }
-  .main_info{
-    flex-direction: row-reverse;
-    align-items: baseline;
-  }
-  .sub_card1{
-    margin-right: 0;
-  }
-  .temperature{
-    font-size: 3rem;
-  }
-  .min_max{
-    flex-direction: column;
-    gap: 0;
-  }
-  .precipitation, .humidity{
-    gap: 0.5rem;
-
-  }
-  .sub_card3{
-    margin-left: 0;
-  }
- } */
 body .layout_box{
   border-radius: 10px;
 }
@@ -582,6 +532,7 @@ body .layout_box{
     height: 108%;
     top: -20px;
   }
+  
   .location span{
     /* font-size: 1.3rem; */
     max-width: 400px;
@@ -783,6 +734,13 @@ thead th:nth-child(2), tbody td:nth-child(2) {
   }
   .layout_box .right-forecast .forecast_instance i{
     margin-right: 0.1rem;
+  }
+  .city{
+    transition: all 0.3s linear;
+  }
+  .city:hover{
+    /* transform: scale(1.03); */
+    box-shadow: 6px 6px 7px rgb(0 0 0 / 28%);
   }
  }
 
