--- a/src/templates/partials/myCitiesCard.hbs
+++ b/src/templates/partials/myCitiesCard.hbs
@@ -1,16 +1,19 @@
-<div class="city bg-[#EEF6FF] dark:bg-[#ffffff1f] outline-1 outline-white dark:outline rounded-[10px] xl:min-w-[300px] xl:max-w-[410px] md:min-w-[250px] md:max-w-[510px] 2xl:max-w-[1000px] h-[240px] max-[1024px]:h-[330px] flex flex-col items-center max-[1024px]:justify-center justify-between p-4 max-[1024px]:p-2">
+<div class="city bg-[#EEF6FF] dark:bg-[#ffffff1f] outline-1 outline-white dark:outline rounded-[10px] xl:min-w-[300px] xl:max-w-[410px] md:min-w-[250px] md:max-w-[510px] 2xl:max-w-[1000px] h-[240px] max-[1024px]:h-[330px] flex flex-col items-center max-[1024px]:justify-center justify-between p-4 max-[1024px]:p-2 hover:cursor-pointer relative" title="Click to view in real time" lat="" lon="">
     <div class="w-full flex flex-row justify-between max-[1024px]:flex-col">
         <div class="myCityLocation items-start flex flex-col gap-2 h-fit">
             <div class="flex gap-2">
                 <img class="w-[25px] dark:hidden mt-1 h-[30px]" src="./resources/dark_profile/map-pin-2-fill.png">
                 <img class="w-[25px] hidden dark:block mt-1 h-[30px]" src="./resources/darkModeIcons/location.svg">
-                <span class="font-bold text-2xl max-[1024px]:text-[1.3rem] max-[1024px]:font-semibold">Prayagraj, Uttar Pradesh</span>
+                <span class="font-bold text-2xl max-[1024px]:text-[1.3rem] max-[1024px]:font-semibold city_location">Prayagraj, Uttar Pradesh</span>
             </div>
             <span class="ml-7 font-semibold text-xl">Temperature: 36&deg;C</span>
             <span class="ml-7">Min: 28&deg;C</span>
             <span class="ml-7">Max: 38&deg;C</span>
         </div> 
+        <span class="city_date absolute top-[5px] right-[10px] text-gray-500 dark:text-gray-400 text-sm">1/14/2024, 04:53 PM</span>
+        <div class="flex flex-col justify-center items-center">
         <img src="https://f005.backblazeb2.com/file/WeatherApp/NightIcons/freezingRain.svg" class="w-[130px] max-[1024px]:m-auto">
+        </div>
     </div>
     <div class="w-full pl-7 flex items-center justify-between max-[1024px]:p-0">
         <span>Precipitaion: 48%</span>
