--- a/src/templates/views/myCities.hbs
+++ b/src/templates/views/myCities.hbs
@@ -17,13 +17,15 @@
                 <h1 class="font-bold text-2xl">Recently Searched Cities</h1>
                 {{#if loggedIn}}
                 <div class="cities grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-3 min-[2000px]:grid-cols-4 gap-4 mt-6">
-            </div>
+                        {{!-- Cities Cards    --}}
+                </div>
             {{else}}
             <div class="lock flex flex-col items-center justify-center h-full">
                 <i class="fa-solid fa-lock"></i>
                 <span>Login to get access</span>
             </div>
             {{/if}}
+
             <div class="mt-[5px] w-full text-right">
             <button class="hover:text-blue-300 px-4 py-2 rounded see_more">See More</button>
             </div>
