--- a/src/templates/partials/sidePanelAll.hbs
+++ b/src/templates/partials/sidePanelAll.hbs
@@ -1,4 +1,4 @@
-<div class="w-[170px] min-[831px]:w-[200px] max-[830px]:h-auto h-screen max-[830px]:w-0">
+<div class="w-[170px] min-[831px]:w-[200px] max-[830px]:h-auto h-screen max-[830px]:w-0 z-10">
 <div class="flex flex-col items-start bottom-0 justify-center fixed w-[170px] min-[831px]:w-[200px] max-[830px]:h-auto h-full max-[830px]:w-full">
 
 
